kubernetes/jenkins/jenkins-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-jenkins
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - mytest-jenkins.marslo.com
    secretName: marslo-certs
  rules:
  - host: mytest-jenkins.marslo.com
    http:
      paths:
      - path:
        backend:
          serviceName: devops-jenkins
          servicePort: 8080
