kubernetes/jenkins/jenkins.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: devops-jenkins
  name: devops-jenkins
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-jenkins
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: devops-jenkins
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - devops-controller-01
                - devops-controller-02
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Dhttp.proxyHost=proxy.domain.com
                 -Dhttp.proxyPort=8080
                 -Dhttps.proxyHost=proxy.domain.com
                 -Dhttps.proxyPort=8080
                 -Dhttp.nonProxyHosts=localhost^|127.0.0.1^|*.domain.com
                 -Duser.timezone=America/Los_Angeles
                 -Dhudson.model.DirectoryBrowserSupport.CSP=
                 -Djenkins.slaves.NioChannelSelector.disabled=true
                 -Djenkins.slaves.JnlpSlaveAgentProtocol3.enabled=false
                 -Djava.awt.headless=true
                 -Djenkins.security.ClassFilterImpl.SUPPRESS_WHITELIST=true
                 -Dhudson.model.ParametersAction.keepUndefinedParameters=true
                 -Dcom.cloudbees.workflow.rest.external.ChangeSetExt.resolveCommitAuthors=true
                 -Djenkins.install.runSetupWizard=true
                 -Dpermissive-script-security.enabled=no_security
                 -DsessionTimeout=1440
                 -DsessionEviction=43200
                 -Dgroovy.grape.report.downloads=true
                 -Divy.message.logger.level=4
                 -Dhudson.plugins.active_directory.ActiveDirectorySecurityRealm.forceLdaps=false
                 -Dfile.encoding=UTF-8
                 -Dsun.jnu.encoding=utf-8
                 -Djenkins.model.Jenkins.logStartupPerformance=true
                 -Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true
                 -Dhudson.lifecycle=hudson.lifecycle.ExitLifecycle
                 -Djsch.client_pubkey=ssh-rsa,ssh-ed25519,ecdsa-sha2-nistp256,ecdsa-sha2-nistp384,ecdsa-sha2-nistp521,rsa-sha2-512,rsa-sha2-256
                 -Djsch.server_host_key=ssh-rsa,ssh-ed25519,ecdsa-sha2-nistp256,ecdsa-sha2-nistp384,ecdsa-sha2-nistp521,rsa-sha2-512,rsa-sha2-256
                 -Djenkins.slaves.JnlpSlaveAgentProtocol3.ALLOW_UNSAFE=tue
                 -XX:+AlwaysPreTouch
                 -XX:+HeapDumpOnOutOfMemoryError
                 -XX:+UseG1GC
                 -XX:+UseStringDeduplication
                 -XX:+ParallelRefProcEnabled
                 -XX:+DisableExplicitGC
                 -XX:+ExplicitGCInvokesConcurrent
                 -XX:+UnlockDiagnosticVMOptions
                 -XX:+UnlockExperimentalVMOptions
                 -XX:+LogVMOutput
                 -XX:InitialRAMPercentage=75.0
                 -XX:MaxRAMPercentage=75.0
                 -XX:HeapDumpPath=/var/jenkins_home/logs
                 -XX:ErrorFile=/var/jenkins_home/logs/hs_err_%p.log
                 -verbose:gc
                 -Xlog:gc
                 -Xlog:gc*
                 -XX:LogFile=/var/jenkins_home/logs/jvm.log
        - name: JNLP_PROTOCOL_OPTS
          value: -Dorg.jenkinsci.remoting.engine.JnlpProtocol3.disabled=false
        image: jenkins/jenkins:2.401.1-lts-jdk11
        imagePullPolicy: IfNotPresent
        name: devops-jenkins
        ports:
        - name: http-port
          containerPort: 8080
          protocol: TCP
        - name: jnlp-port
          containerPort: 50000
          protocol: TCP
        - name: cli-port
          containerPort: 38238
          protocol: TCP
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: devops-jenkins-home
        - mountPath: /var/run/docker.sock
          name: docker-sock
        - mountPath: /usr/bin/docker
          name: docker
      restartPolicy: Always
      volumes:
      - name: devops-jenkins-home
        persistentVolumeClaim:
          claimName: devops-jenkins-nfs-pvc
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
      - name: docker
        hostPath:
          path: /usr/bin/docker
      serviceAccount: devops-jenkins-admin

# svc
---
apiVersion: v1
kind: Service
metadata:
  name: devops-jenkins
  namespace: devops
spec:
  type: ClusterIP
  ports:
    - name: jenkins-http
      port: 8080
      protocol: TCP
      targetPort: http-port
  selector:
    app: devops-jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: devops-jenkins-discovery
  namespace: devops
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
    - name: jenkins-agent
      protocol: TCP
      port: 30380
      targetPort: jnlp-port
    - name: cli-agent
      protocol: TCP
      port: 38238
      targetPort: cli-port
  selector:
    app: devops-jenkins

# ingeress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-jenkins
  namespace: devops
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/whitelist-x-forwarded-for: "false"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: https,http
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  labels:
    app: devops-jenkins
spec:
  rules:
  - host: devops.marslo.com
    http:
      paths:
      - backend:
          serviceName: devops-jenkins
          servicePort: jenkins-http
        path: /
  tls:
  - hosts:
    - devops.marslo.com
    secretName: tls
status:
  loadBalancer: {}
