kubernetes/jenkins/marslo-recommended-v2.0.yaml
# pvc
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops
  namespace: devops-ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - devops5-www06
      containers:
        - name: devops
          image: jenkins/jenkins:2.206
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
            - name: cli-port
              containerPort: 38338
          volumeMounts:
            - name: devops-home
              mountPath: /var/jenkins_home
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: docker
              mountPath: /usr/bin/docker
          resources:
            requests:
              memory: '8Gi'
              cpu: '8'
            limits:
              memory: '16Gi'
              cpu: '16'
      volumes:
        - name: devops-home
          persistentVolumeClaim:
            claimName: devops-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: docker
          hostPath:
            path: /usr/bin/docker
      serviceAccount: "devops-admin"

---

apiVersion: v1
kind: Service
metadata:
  name: devops
  namespace: devops-ci
spec:
  template:
    metadata:
      labels:
        name: devops
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080
  selector:
    app: devops
---
apiVersion: v1
kind: Service
metadata:
  name: devops-discovery
  namespace: devops-ci
spec:
  template:
    metadata:
      labels:
        name: devops-discovery
spec:
  type: NodePort
  ports:
    - name: cli-port
      nodePort: 32388
      port: 38338
      targetPort: 38338
    - name: jnlp-port
      nodePort: 32389
      port: 50000
      targetPort: 50000
  selector:
    app: devops

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops
  namespace: devops-ci
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/whitelist-x-forwarded-for: "false"
    traefik.frontend.redirect.entryPoint: https
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: devops
spec:
  rules:
  - host: devops.mysite.com
    http:
      paths:
      - backend:
          serviceName: devops
          servicePort: http-port
          # servicePort: 8080
  tls:
  - hosts:
    - devops.mysite.com
    secretName: mysite-tls
